# wecom-app-callback

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start_app_prod.sh  start_server.py
app/: main.py
app/api/: health.py  wechat.py
app/core/: __init__.py  config.py  exceptions.py
app/utils/: crypto.py  text_to_pdf.py  wecom.py
src/ai_smart_assistant/: main.py
src/ai_smart_assistant/core/: error_handler.py  exceptions.py  logging.py
src/ai_smart_assistant/utils/: wecom.py
